# spoken-numbers-recognition

./: .env.example  .gitignore  README.md  REPORT.md  main.py  pyproject.toml
configs/: sweep_baseline.yaml
notebooks/: public_submission_notebook.ipynb
scripts/: run_baseline_sweep.sh
src/: infer_baseline.py  make_submission.py  sweep_baseline.py  train_baseline.py
src/asr/: __init__.py  data.py  features.py  metrics.py  model.py  tokenizer.py
src/asr/tokenizers/: __init__.py  compact.py  words.py
src/dataset/: download.py  preprocess_audio.py
src/notebooks/: eda_spoken_numbers.ipynb
