[project]
name = "spoken-numbers-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.9.1",
  "pandas>=2.2",
  "numpy>=2.0",
  "plotly>=5.24",
  "ipywidgets>=8.1",
  "librosa>=0.10",
  "scipy>=1.14",
  "tqdm>=4.66",
  "soundfile>=0.12",
  "kagglehub>=0.3",
  "jupyterlab>=4.2",
  "python-dotenv>=1.2.2",
  "pyyaml>=6.0",
  "ruff>=0.15.8",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }
